# Sample_YOLO11-OrangepiAIPro

./: .gitignore
model/: aipp.cfg
src/: CMakeLists.txt  Sample_YOLO11-OrangepiAIPro.cpp
